yaml/quarkus/quarkus-web-socket-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/part-of: quarkus-web-socket-server
    app.kubernetes.io/name: quarkus-web-socket-server
    app.kubernetes.io/version: '1.0'
  name: quarkus-web-socket-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/part-of: quarkus-web-socket-server
      app.kubernetes.io/name: quarkus-web-socket-server
      app.kubernetes.io/version: '1.0'
  template:
    metadata:
      labels:
        app.kubernetes.io/part-of: quarkus-web-socket-server
        app.kubernetes.io/name: quarkus-web-socket-server
        app.kubernetes.io/version: '1.0'
    spec:
      containers:
        - env:
            - name: KUBERNETES_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
          image: 10.98.84.41/quarkus-web-socket-server:1.0
          imagePullPolicy: Always
          name: quarkus-web-socket-server
          ports:
            - containerPort: 8081
              name: http
              protocol: TCP
