yaml/quarkus/quarkus-camel-k-demo.yaml
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: quarkus-camel-k-demo
    app.kubernetes.io/version: '1.0'
  name: quarkus-camel-k-demo
spec:
  template:
    metadata:
      labels:
        app.kubernetes.io/name: quarkus-camel-k-demo
        app.kubernetes.io/version: '1.0'
    spec:
      containers:
        - image: 10.109.218.165/quarkus-camel-k-demo:1.0
          name: quarkus-camel-k-demo
          ports:
            - containerPort: 8080
              name: http1
              protocol: TCP
      serviceAccountName: default
