yaml/quarkus/quarkus-web-socket-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: quarkus-web-socket-server
    app.kubernetes.io/part-of: quarkus-web-socket-server
    app.kubernetes.io/version: '1.0'
  name: quarkus-web-socket-server
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8081
  selector:
    app.kubernetes.io/name: quarkus-web-socket-server
    app.kubernetes.io/part-of: quarkus-web-socket-server
    app.kubernetes.io/version: '1.0'
  type: ClusterIP
