yaml/quarkus/quarkus-web-socket-server-ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: web-socket-server
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: '0'
spec:
  ingressClassName: nginx
  rules:
    - host: quarkus-web-socket-server.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: quarkus-web-socket-server
                port:
                  number: 80
